Fix image stretch on horizontal images

--- a/nobody-photo/src/app/project-detail/project-detail.component.scss
+++ b/nobody-photo/src/app/project-detail/project-detail.component.scss
@@ -23,11 +23,27 @@ $screen-md-max:              ($screen-lg-min - 1);
 		.item-elem {
 			display: flex;
 			justify-content: center;
+			align-items: center;
 			height: 100vh;
 			padding: 5% 0;
 			img{
 				width: auto;
 				height: 100%;
+				@media (max-width: #{$screen-sm-max}) {
+					width: 100%;
+					height: auto;
+				}
+			}
+		}
+
+		@media (max-width: #{$screen-sm-max}) {
+			.owl-nav{
+				& .owl-prev,
+				& .owl-next{
+					&:before{
+						color: white;
+					}
+				}
 			}
 		}
 	}
